[gd_scene load_steps=2 format=3 uid="uid://cadjompe5itss"]

[ext_resource type="Script" path="res://utils/TELogger.gd" id="1_mvg57"]

[node name="TeLogger" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mvg57")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxControl" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="VBox/HBoxControl"]
layout_mode = 2
item_count = 5
selected = 1
popup/item_0/text = "Debug"
popup/item_0/id = 1
popup/item_1/text = "Info"
popup/item_1/id = 2
popup/item_2/text = "Warn"
popup/item_2/id = 3
popup/item_3/text = "Error"
popup/item_3/id = 4
popup/item_4/text = "Fatal"
popup/item_4/id = 5

[node name="Padding" type="Control" parent="VBox/HBoxControl"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxFilter" type="HBoxContainer" parent="VBox/HBoxControl"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBox/HBoxControl/HBoxFilter"]
layout_mode = 2
text = "Filter
"

[node name="LineEditFilter" type="LineEdit" parent="VBox/HBoxControl/HBoxFilter"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RTConsole" type="RichTextLabel" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/line_separation = 3
scroll_following = true
tab_size = 2
